--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "index.d.ts"
   ],
   "scripts": {
-    "dev": "cross-env NODE_ENV=dev webpack-dev-server --progress --mode development --config webpack.config.dev.js",
-    "build": "cross-env NODE_ENV=production webpack -p --progress --mode production --config webpack.config.build.js",
-    "build-lib": "cross-env NODE_ENV=production webpack -p --progress --mode production --config webpack.config.build.lib.js",
+    "dev": "cross-env NODE_ENV=dev NODE_OPTIONS=--openssl-legacy-provider webpack-dev-server --progress --mode development --config webpack.config.dev.js",
+    "build": "cross-env NODE_ENV=production NODE_OPTIONS=--openssl-legacy-provider webpack -p --progress --mode production --config webpack.config.build.js",
+    "build-lib": "cross-env NODE_ENV=production NODE_OPTIONS=--openssl-legacy-provider webpack -p --progress --mode production --config webpack.config.build.lib.js",
     "push-release": "sh ./scripts/release.sh",
     "push-dev": "sh ./scripts/dev.sh",
     "fetch-data": "babel-node app/lib/getMcaGovData.js"
@@ -24,6 +24,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/ldwonday/zh-address-parse.git"
+  },
+  "overrides": {
+    "websocket-driver": "^0.7.4"
   },
   "dependencies": {
     "jquery": "^3.4.1",
